translation-tool/inputs/source_meta/objects/Order_Offer_LineItem__c.object
<CustomObject>
    <fields>
        <fullName>Add_On_Upfront_Fee__c</fullName>
        <label>Add On Upfront Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Charge__c</fullName>
        <label>Additional Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commitment_Fee__c</fullName>
        <label>Commitment Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commitment__c</fullName>
        <label>Commitment Duration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Amount_Duration_in_Months__c</fullName>
        <label>Credit Amount Duration (in Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Type__c</fullName>
        <label>Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VALUE</fullName>
                </value>
                <value>
                    <fullName>PERCENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Purchase__c</fullName>
        <label>Lease or Purchase</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Term__c</fullName>
        <label>Lease Term</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_LineItem_Category__c</fullName>
        <label>Offer LineItem Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_LineItem_Name__c</fullName>
        <label>Offer LineItem Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_LineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer LineItem</label>
        <referenceTo>OfferLineItem__c</referenceTo>
        <relationshipLabel>Order Offer LineItems</relationshipLabel>
        <relationshipName>Order_Offer_LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_Name__c</fullName>
        <label>Offer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Offer__c</fullName>
        <label>Order Offer</label>
        <referenceTo>Order_Offer__c</referenceTo>
        <relationshipLabel>Order Offer LineItems</relationshipLabel>
        <relationshipName>Order_Offer_LineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Override_Billing_Deal_Name__c</fullName>
        <label>Override Billing Deal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Price__c</fullName>
        <label>Override Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promotional_Discount__c</fullName>
        <label>Promotional Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Token_Bandwidth__c</fullName>
        <label>Token Bandwidth (MB)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Upfront_Fee__c</fullName>
        <formula>IF( (Add_On_Upfront_Fee__c -  Promotional_Discount__c +  Commitment_Fee__c ) &gt; 0, (Add_On_Upfront_Fee__c -  Promotional_Discount__c +  Commitment_Fee__c ), 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Upfront Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order Offer LineItem</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ORDOFRLI - {0000000000}</displayFormat>
        <label>Order Offer LineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Offer LineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>